--- a/templates/register/registro.html
+++ b/templates/register/registro.html
@@ -98,14 +98,22 @@
                         </div>
     
                         <div class="input-box">
-                            <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
-                            <input type="password" required name="password1">
+                            <span class="icon"><i class='bx bxs-lock-alt'></i></span>
+                            <input type="password" id="password-field" required name="password1">
                             <label>Contraseña</label>
                             <small style="color: grey;">La contraseña debe tener al menos 8 caracteres.</small>
+                            <small style="color: grey;">La contraseña no debe ser similar a su nombre de usuario.</small>
+                            <small style="color: grey;">La contraseña debe tener un mínimo de dificultad de lo contrario no se creara el usuario.</small>
+
+                            <button type="button" id="toggle-password" class="toggle-password" onclick="togglePasswordVisibility()">
+                                <i class='bx bx-show'></i>
+                            </button>
+                        </div>
+                        
                         <div class="input-box">
-                                <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
-                                <input type="password" required name="password2">
-                                <label>Confirmar Contraseña</label>
+                            <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
+                            <input type="password" id="confirm-password-field" required name="password2">
+                            <label>Confirmar Contraseña</label>
                         </div>
     
                     <button class="btn">Regístrate</button>
@@ -148,6 +156,21 @@
             errorMessage.style.display = 'none';
         }
     }, 3000);
+</script>
+
+<script>
+    function togglePasswordVisibility() {
+        var passwordField = document.getElementById("password-field");
+        var toggleButton = document.getElementById("toggle-password");
+
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            toggleButton.innerHTML = "<i class='bx bx-hide'></i>"; // Icono para ocultar
+        } else {
+            passwordField.type = "password";
+            toggleButton.innerHTML = "<i class='bx bx-show'></i>"; // Icono para mostrar
+        }
+    }
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
