--- a/templates/register/registro.html
+++ b/templates/register/registro.html
@@ -103,8 +103,7 @@
                             <label>Contraseña</label>
                             <small style="color: grey;">La contraseña debe tener al menos 8 caracteres.</small>
                             <br>
-                            <small style="color: grey;">La contraseña no debe ser similar a su nombre de usuario.</small>
-                            <br>
+                            <small style="color: grey;">La contraseña no debe ser similar a su nombre.</small>
                         </div>
                         <div class="input-box">
                             <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
