--- a/templates/register/registro.html
+++ b/templates/register/registro.html
@@ -98,17 +98,14 @@
                         </div>
     
                         <div class="input-box">
-                            <span class="icon"><i class='bx bxs-lock-alt'></i></span>
-                            <input type="password" id="password-field" required name="password1">
-                            <label>Contraseña</label>
-                            <small style="color: grey;">La contraseña debe tener al menos 8 caracteres.</small>
-                            <br>
-                            <small style="color: grey;">La contraseña no debe ser similar a su nombre.</small>
-                        </div>
-                        <div class="input-box">
                             <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
-                            <input type="password" id="confirm-password-field" required name="password2">
-                            <label>Confirmar Contraseña</label>
+                            <input type="password" required name="password1">
+                            <label>Contraseña</label>
+                            <small style="color: grey;">La contraseña debe tener al menos 8 caracteres y no ser similar a su nombre.</small>
+                        <div class="input-box">
+                                <span class="icon"><i class='bx bxs-lock-alt' ></i></span>
+                                <input type="password" required name="password2">
+                                <label>Confirmar Contraseña</label>
                         </div>
     
                     <button class="btn">Regístrate</button>
