--- a/templates/dashboard/login.html
+++ b/templates/dashboard/login.html
@@ -45,7 +45,7 @@
             background-image: url("{% static 'image/fondo1.png' %}");
         }
     </style>
-    {% include 'snippets/navbar.html' %}
+    {% include 'snippets/navbar-admin.html' %}
 
 
     {% if messages %}
