--- a/templates/dashboard/login.html
+++ b/templates/dashboard/login.html
@@ -40,6 +40,12 @@
 </head>
 
 <body>
+    <style>
+        body {
+            background-image: url("{% static 'image/fondo1.png' %}");
+        }
+    </style>
+
     {% include 'snippets/navbar.html'%}
 
 
