--- a/templates/register/registro.html
+++ b/templates/register/registro.html
@@ -103,7 +103,7 @@
                                     <span class="icon"><i class='bx bxs-lock-alt'></i></span>
                                     <input type="password" required name="password1">
                                     <label>Contraseña</label>
-                                    <small style="color: grey;">La contraseña debe tener al menos 8 caracteres.</small>
+                                    <small style="color: grey;">La contraseña debe tener al menos 8 caracteres y contener un carácter especial.</small>
 
                                 </div>
                                 <div class="input-box">
