--- a/templates/ganancias/nueva_ganancia.html
+++ b/templates/ganancias/nueva_ganancia.html
@@ -67,7 +67,7 @@
                     <div class="mb-3">
                         <label for="service" class="form-label">Servicio</label>
                         <br>
-                        {{ form.SalesForm }}
+                        {{ form.Service}}
                     </div>
                     
                     <div class="mb-3">
