--- a/templates/ganancias/nueva_ganancia.html
+++ b/templates/ganancias/nueva_ganancia.html
@@ -7,30 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- Boostrap-->
-
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <!-- Font awesome-->
-
+    <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <!-- Personalizado -->
-    
     <title>Solicitar servicio</title>
     <link rel="shortcut icon" href="{% static 'image/logo1.png' %}" type="image/x-icon">
 
     <!-- Fonts -->
-
     <!-- Nunito -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <!-- Oswald -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
@@ -47,13 +41,13 @@
     {% include 'snippets/navbar-admin.html' %}
 
     {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-danger">
-        {{ message }}
-    </div>
-    {% endfor %}
+        {% for message in messages %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
     {% endif %}
-    
+
     <div class="container mt-5">
         <form method="POST">
             {% csrf_token %}
@@ -63,21 +57,26 @@
                 </div>
                 <div class="card-body">
                     <p class="lead">Completa los siguientes campos para realizar la solicitud sobre el servicio que deseas</p>
-                    
                     <div class="mb-3">
-                        <label for="service" class="form-label">Servicio</label>
+                        <table>
+                            <input type="hidden" name="user" value="{{user.id}}">
+                            <input type="hidden" name="name" required value="Compra">
+                            <tr>
+                                <td><label for="service" class="form-label">Servicio</label></td>
+                            </tr>
+                            <tr>
+                                <td>{{form.service}}</td>
+                            </tr>
+                        </table>
                         <br>
-                        {{ form.Service}}
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="amount" class="form-label">Cantidad</label>
-                        <input type="number" name="amount" class="form-control" required>
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="date" class="form-label">Fecha</label>
-                        <input type="date" name="date" class="form-control" value="" required>
+                        <div class="mb-3">
+                            <label for="amount" class="form-label">Cantidad</label>
+                            <input type="number" name="amount" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="date" class="form-label">Fecha</label>
+                            <input type="date" name="date" class="form-control" value="" required>
+                        </div>
                     </div>
                 </div>
                 <div class="card-footer text-end">
@@ -86,9 +85,6 @@
             </div>
         </form>
     </div>
-    
-    
-
 
     {% include 'snippets/footer.html' %}
 
