--- a/templates/snippets/navbar-actividades-emp.html
+++ b/templates/snippets/navbar-actividades-emp.html
@@ -40,7 +40,7 @@
 
     <div class="container d-flex align-items-center">
 
-        <a class="navbar-brand" href="{% url 'empleado' %}" style="color: white; display: flex; align-items: center;">
+        <a class="navbar-brand" href="{% url 'home' %}" style="color: white; display: flex; align-items: center;">
             
             <img src="{% static 'image/logo1.png' %}" alt="Logo" width="80px" style="margin-right: 5px;">
             
